@@ -145,6 +145,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Enumeration
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -952,6 +962,30 @@ operator|.
 name|varia
 operator|.
 name|NullAppender
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|log4j
+operator|.
+name|FileAppender
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|log4j
+operator|.
+name|Appender
 import|;
 end_import
 
@@ -5331,15 +5365,59 @@ name|printUsage
 argument_list|()
 expr_stmt|;
 block|}
+comment|// print out the location of the log file for the user so
+comment|// that it's easy to find reason for local mode execution failures
+for|for
+control|(
+name|Appender
+name|appender
+range|:
+name|Collections
+operator|.
+name|list
+argument_list|(
+operator|(
+name|Enumeration
+argument_list|<
+name|Appender
+argument_list|>
+operator|)
+name|LogManager
+operator|.
+name|getRootLogger
+argument_list|()
+operator|.
+name|getAllAppenders
+argument_list|()
+argument_list|)
+control|)
+block|{
+if|if
+condition|(
+name|appender
+operator|instanceof
+name|FileAppender
+condition|)
+block|{
 name|console
 operator|.
 name|printInfo
 argument_list|(
-literal|"plan = "
+literal|"Execution log at: "
 operator|+
-name|planFileName
+operator|(
+operator|(
+name|FileAppender
+operator|)
+name|appender
+operator|)
+operator|.
+name|getFile
+argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+block|}
 comment|// log the list of job conf parameters for reference
 name|LOG
 operator|.
