@@ -35,6 +35,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|OutputStream
 import|;
 end_import
@@ -118,6 +128,20 @@ operator|.
 name|fs
 operator|.
 name|FileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FileUtil
 import|;
 end_import
 
@@ -950,6 +974,20 @@ operator|+
 name|hiveConfArgs
 decl_stmt|;
 name|String
+name|workDir
+init|=
+operator|(
+operator|new
+name|File
+argument_list|(
+literal|"."
+argument_list|)
+operator|)
+operator|.
+name|getCanonicalPath
+argument_list|()
+decl_stmt|;
+name|String
 name|files
 init|=
 name|getResourceFiles
@@ -980,6 +1018,124 @@ literal|" -files "
 operator|+
 name|files
 expr_stmt|;
+name|workDir
+operator|=
+operator|(
+operator|new
+name|Path
+argument_list|(
+name|ctx
+operator|.
+name|getLocalTmpFileURI
+argument_list|()
+argument_list|)
+operator|)
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+operator|!
+operator|(
+operator|new
+name|File
+argument_list|(
+name|workDir
+argument_list|)
+operator|)
+operator|.
+name|mkdir
+argument_list|()
+condition|)
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Cannot create tmp working dir: "
+operator|+
+name|workDir
+argument_list|)
+throw|;
+for|for
+control|(
+name|String
+name|f
+range|:
+name|StringUtils
+operator|.
+name|split
+argument_list|(
+name|files
+argument_list|,
+literal|','
+argument_list|)
+control|)
+block|{
+name|Path
+name|p
+init|=
+operator|new
+name|Path
+argument_list|(
+name|f
+argument_list|)
+decl_stmt|;
+name|String
+name|target
+init|=
+name|p
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+decl_stmt|;
+name|String
+name|link
+init|=
+name|workDir
+operator|+
+name|Path
+operator|.
+name|SEPARATOR
+operator|+
+name|p
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|FileUtil
+operator|.
+name|symLink
+argument_list|(
+name|target
+argument_list|,
+name|link
+argument_list|)
+operator|!=
+literal|0
+condition|)
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Cannot link to added file: "
+operator|+
+name|target
+operator|+
+literal|" from: "
+operator|+
+name|link
+argument_list|)
+throw|;
+block|}
 block|}
 name|LOG
 operator|.
@@ -1082,6 +1238,28 @@ argument_list|()
 argument_list|)
 decl_stmt|;
 comment|// The user can specify the hadoop memory
+if|if
+condition|(
+literal|"local"
+operator|.
+name|equals
+argument_list|(
+name|conf
+operator|.
+name|getVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HADOOPJT
+argument_list|)
+argument_list|)
+condition|)
+block|{
+comment|// if we are running in local mode - then the amount of memory used
+comment|// by the child jvm can no longer default to the memory used by the
+comment|// parent jvm
 name|int
 name|hadoopMem
 init|=
@@ -1103,6 +1281,8 @@ operator|==
 literal|0
 condition|)
 block|{
+comment|// remove env var that would default child jvm to use parent's memory
+comment|// as default. child jvm would use default memory for a hadoop client
 name|variables
 operator|.
 name|remove
@@ -1113,7 +1293,7 @@ expr_stmt|;
 block|}
 else|else
 block|{
-comment|// user specified the memory - only applicable for local mode
+comment|// user specified the memory for local mode hadoop run
 name|variables
 operator|.
 name|put
@@ -1128,6 +1308,13 @@ name|hadoopMem
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+comment|// nothing to do - we are not running in local mode - only submitting
+comment|// the job via a child process. in this case it's appropriate that the
+comment|// child jvm use the same memory as the parent jvm
 block|}
 if|if
 condition|(
@@ -1244,6 +1431,12 @@ argument_list|(
 name|cmdLine
 argument_list|,
 name|env
+argument_list|,
+operator|new
+name|File
+argument_list|(
+name|workDir
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|StreamPrinter
