@@ -9527,151 +9527,6 @@ name|pos
 argument_list|)
 return|;
 block|}
-comment|/**    * If the user script command needs any modifications - do it here.    */
-specifier|private
-name|String
-name|getFixedCmd
-parameter_list|(
-name|String
-name|cmd
-parameter_list|)
-block|{
-name|SessionState
-name|ss
-init|=
-name|SessionState
-operator|.
-name|get
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|ss
-operator|==
-literal|null
-condition|)
-block|{
-return|return
-name|cmd
-return|;
-block|}
-comment|// for local mode - replace any references to packaged files by name with
-comment|// the reference to the original file path
-if|if
-condition|(
-name|ss
-operator|.
-name|getConf
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|"mapred.job.tracker"
-argument_list|,
-literal|"local"
-argument_list|)
-operator|.
-name|equals
-argument_list|(
-literal|"local"
-argument_list|)
-condition|)
-block|{
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|files
-init|=
-name|ss
-operator|.
-name|list_resource
-argument_list|(
-name|SessionState
-operator|.
-name|ResourceType
-operator|.
-name|FILE
-argument_list|,
-literal|null
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-operator|(
-name|files
-operator|!=
-literal|null
-operator|)
-operator|&&
-operator|!
-name|files
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-name|String
-name|prog
-init|=
-name|getScriptProgName
-argument_list|(
-name|cmd
-argument_list|)
-decl_stmt|;
-name|String
-name|args
-init|=
-name|getScriptArgs
-argument_list|(
-name|cmd
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|String
-name|oneFile
-range|:
-name|files
-control|)
-block|{
-name|Path
-name|p
-init|=
-operator|new
-name|Path
-argument_list|(
-name|oneFile
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|p
-operator|.
-name|getName
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-name|prog
-argument_list|)
-condition|)
-block|{
-name|cmd
-operator|=
-name|oneFile
-operator|+
-name|args
-expr_stmt|;
-break|break;
-block|}
-block|}
-block|}
-block|}
-return|return
-name|cmd
-return|;
-block|}
 specifier|private
 name|String
 name|getScriptProgName
@@ -11519,8 +11374,6 @@ argument_list|(
 operator|new
 name|ScriptDesc
 argument_list|(
-name|getFixedCmd
-argument_list|(
 name|fetchFilesNotInLocalFilesystem
 argument_list|(
 name|stripQuotes
@@ -11534,7 +11387,6 @@ argument_list|)
 operator|.
 name|getText
 argument_list|()
-argument_list|)
 argument_list|)
 argument_list|)
 argument_list|,
