@@ -1,5 +1,7 @@
 CREATE TABLE dest1(key INT, value STRING) STORED AS TEXTFILE;
 
+ADD FILE ../data/scripts/input20_script;
+
 EXPLAIN
 FROM (
   FROM src
@@ -10,7 +12,7 @@ FROM (
 ) tmap
 INSERT OVERWRITE TABLE dest1
 REDUCE tmap.key, tmap.value
-USING '../data/scripts/input20_script'
+USING 'input20_script'
 AS (key STRING, value STRING);
 
 FROM (
@@ -22,7 +24,7 @@ FROM (
 ) tmap
 INSERT OVERWRITE TABLE dest1
 REDUCE tmap.key, tmap.value
-USING '../data/scripts/input20_script'
+USING 'input20_script'
 AS (key STRING, value STRING);
 
 SELECT * FROM dest1 SORT BY key, value;
