@@ -1,4 +1,4 @@
-CREATE TABLE scriptfile1_dest1(key INT, value STRING);
+CREATE TABLE dest1(key INT, value STRING);
 
 ADD FILE src/test/scripts/testgrep;
 
@@ -8,6 +8,6 @@ FROM (
          USING 'testgrep' AS (tkey, tvalue) 
   CLUSTER BY tkey 
 ) tmap
-INSERT OVERWRITE TABLE scriptfile1_dest1 SELECT tmap.tkey, tmap.tvalue;
+INSERT OVERWRITE TABLE dest1 SELECT tmap.tkey, tmap.tvalue;
 
-SELECT scriptfile1_dest1.* FROM scriptfile1_dest1;
+SELECT dest1.* FROM dest1;
