@@ -13,12 +13,12 @@ STORED AS
   OUTPUTFORMAT 'org.apache.hadoop.hive.ql.io.RCFileOutputFormat'
 POSTHOOK: type: CREATETABLE
 POSTHOOK: Output: default@columnTable_Bigdata
-PREHOOK: query: FROM (FROM src MAP src.key,src.value USING 'python ../data/scripts/dumpdata_script.py' AS (key,value) WHERE src.key = 10) subq
+PREHOOK: query: FROM (FROM src MAP src.key,src.value USING 'python dumpdata_script.py' AS (key,value) WHERE src.key = 10) subq
 INSERT OVERWRITE TABLE columnTable_Bigdata SELECT subq.key, subq.value
 PREHOOK: type: QUERY
 PREHOOK: Input: default@src
 PREHOOK: Output: default@columntable_bigdata
-POSTHOOK: query: FROM (FROM src MAP src.key,src.value USING 'python ../data/scripts/dumpdata_script.py' AS (key,value) WHERE src.key = 10) subq
+POSTHOOK: query: FROM (FROM src MAP src.key,src.value USING 'python dumpdata_script.py' AS (key,value) WHERE src.key = 10) subq
 INSERT OVERWRITE TABLE columnTable_Bigdata SELECT subq.key, subq.value
 POSTHOOK: type: QUERY
 POSTHOOK: Input: default@src
@@ -38,11 +38,11 @@ value               	string              	from deserializer
 PREHOOK: query: select count(columnTable_Bigdata.key) from columnTable_Bigdata
 PREHOOK: type: QUERY
 PREHOOK: Input: default@columntable_bigdata
-PREHOOK: Output: file:/tmp/thiruvel/hive_2010-09-14_07-16-04_020_3830957675073157960/-mr-10000
+PREHOOK: Output: file:/tmp/jssarma/hive_2010-10-04_16-33-25_075_8537788494860858123/-mr-10000
 POSTHOOK: query: select count(columnTable_Bigdata.key) from columnTable_Bigdata
 POSTHOOK: type: QUERY
 POSTHOOK: Input: default@columntable_bigdata
-POSTHOOK: Output: file:/tmp/thiruvel/hive_2010-09-14_07-16-04_020_3830957675073157960/-mr-10000
+POSTHOOK: Output: file:/tmp/jssarma/hive_2010-10-04_16-33-25_075_8537788494860858123/-mr-10000
 POSTHOOK: Lineage: columntable_bigdata.key SCRIPT [(src)src.FieldSchema(name:key, type:string, comment:default), (src)src.FieldSchema(name:value, type:string, comment:default), ]
 POSTHOOK: Lineage: columntable_bigdata.value SCRIPT [(src)src.FieldSchema(name:key, type:string, comment:default), (src)src.FieldSchema(name:value, type:string, comment:default), ]
 5005500
